--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <h1>Hello World</h1>
+    </header>
+
+    <main>
+        <h2>Hello World (ma più piccolo)</h2>
+    </main>
+    
 </body>
 </html>
